# mpc_test

./: .gitignore  README.md
traj_tracking/: CMakeLists.txt  README
traj_tracking/doc/: MPC_4_TEST.m  MPC_4_TEST_new.m
traj_tracking/include/: mpc_control.h  sim_locate.h  traj_generate.h
traj_tracking/src/: CMakeLists.txt  main.cpp  mpc_control.cpp  sim_locate.cpp  sim_locate_test.cpp  traj_generate.cpp
